--- a/cart.html
+++ b/cart.html
@@ -695,7 +695,7 @@
             const total = subtotal;
             
             cartContent.innerHTML = `
-                <div class="cart-items">
+                  <div class="cart-item">
                     ${cartItemsHTML}
                 </div>
                 <div class="cart-summary">
@@ -707,11 +707,9 @@
                             <label for="customer-name">Your Name*</label>
                             <input type="text" id="customer-name" placeholder="enter name" required>
                         </div>
-                    </div>
-                    
                         <div class="form-group">
-                            <label for="customer-name">Your mail id*</label>
-                            <input type="text" id="mail id" placeholder="mail id" required>
+                            <label for="customer-email">Your mail id*</label>
+                            <input type="email" id="customer-email" placeholder="mail id" required>
                         </div>
                     </div>
                     <div class="summary-row">
@@ -724,7 +722,7 @@
                     </div>
                     <div class="summary-row summary-total">
                         <span>Total:</span>
-                        <span>₹${total}</span>
+                        <span>₹${subtotal + 10}</span>
                     </div>
                     <button class="buy-now-btn" id="buy-now-btn">
                         <i class="fab fa-whatsapp"></i> Order via WhatsApp
