--- a/cart.html
+++ b/cart.html
@@ -695,7 +695,7 @@
             const total = subtotal;
             
             cartContent.innerHTML = `
-                  <div class="cart-item">
+                  <div class="cart-items">
                     ${cartItemsHTML}
                 </div>
                 <div class="cart-summary">
