--- a/cart.html
+++ b/cart.html
@@ -707,6 +707,7 @@
                             <label for="customer-name">Your Name*</label>
                             <input type="text" id="customer-name" placeholder="enter name" required>
                         </div>
+                        <div class="customer-info">
                         <div class="form-group">
                             <label for="customer-email">Your mail id*</label>
                             <input type="email" id="customer-email" placeholder="mail id" required>
@@ -914,3 +915,4 @@
     </script>
 </body>
 </html>
+
