--- a/cart.html
+++ b/cart.html
@@ -833,6 +833,7 @@
             const message = `Hello! I would like to place an order:\n\n` +
                           `*Customer Details:*\n` +
                           `Name: ${name}\n\n` +
+                          `customer-email: ${name}\n\n` +
                           `*Order Details:*\n` +
                           `${orderDetails}\n` +
                           `*Total Amount: ₹${total}*\n\n` +
@@ -915,4 +916,5 @@
     </script>
 </body>
 </html>
+
 
