--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SK Edz | Professional Video & Image Editing</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="shortcut icon" href="WhatsApp Image 2025-08-18 at 16.00.20_ae9954eb.jpg">
     <style>
         * {
             margin: 0;
@@ -590,4 +591,5 @@
         </div>
     </footer>
 </body>
+
 </html>
