--- a/ad.html
+++ b/ad.html
@@ -589,13 +589,13 @@
                         <i class="fab fa-whatsapp"></i>
                     </div>
                     <div class="whatsapp-card-content">
-                        <h3 class="whatsapp-card-title">Apply for Promotion via WhatsApp</h3>
+                        <h3 class="whatsapp-card-title">Apply for Promotion via WhatsApp at just 99₹/-</h3>
                         <p class="whatsapp-card-description">Get your products featured on our platform. Message us directly on WhatsApp for quick response!</p>
                         
                         <ul class="whatsapp-card-features">
                             <li>Direct WhatsApp chat</li>
                             <li>Quick response within hours</li>
-                            <li>7-day promotion period</li>
+                            <li>30-day promotion period</li>
                             <li>Featured on homepage & social media</li>
                         </ul>
                         
@@ -695,4 +695,5 @@
         updateCartCount();
     </script>
 </body>
+
 </html>
