--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
                 <div>
                     <a href="buy.html" class="btn btn-outline">View Services</a>
                     <a href="contact.html" class="btn btn-outline">Contact Us</a>
-                    <a href="https://sk-edz-web.github.io/profile/nowfal.efx/" class="btn btn-outline">creator profile</a>
+                    <a href="https://sk-edz-web.github.io/profile/home/" class="btn btn-outline">creator profile</a>
                 </div>
             </div>
         </div>
@@ -596,3 +596,4 @@
 </body>
 
 </html>
+
