--- a/ad.html
+++ b/ad.html
@@ -702,7 +702,7 @@
                         <div class="product-card-wishlist" data-product="Advertisement">
                             <i class="far fa-heart"></i>
                         </div>
-                        <img src="nowfal.cc.jpg" alt="advertisement">
+                        <img src="nowfal.2.jpg" alt="advertisement">
                     </div>
                     <div class="product-card-content">
                         <h3 class="product-card-title">After effect cc</h3>
@@ -888,4 +888,5 @@
         updateCartCount();
     </script>
 </body>
+
 </html>
