--- a/ad.html
+++ b/ad.html
@@ -731,11 +731,11 @@
         <img src="logo.jpg" alt="Golden Membership Plans">
     </div>
     <div class="product-card-content">
-        <h3 class="product-card-title">Golden Membership</h3>
-        <p class="product-card-description">Unlock premium features with our exclusive golden membership plans. Choose from Basic, Premium, or Golden VIP.</p>
+        <h3 class="product-card-title">start your shop</h3>
+        <p class="product-card-description">subscribe to start your own shop at just 99.</p>
         
         <div class="product-card-price">
-            <span class="product-card-current-price">From ₹99/month</span>
+            <span class="product-card-current-price">start From ₹99/month</span>
         </div>
         
         <div class="product-card-rating">
